--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--DEVELOPER Michael Halaj, IS117-102, Spring 2024-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,8 +10,10 @@
 </head>
 <body class="d-flex flex-column">
     <div id="page">
-        <nav class="navbar navbar-expand-lg">
-            <a class="navbar-brand" href="#">Navbar</a>
+        <nav class="navbar navbar-expand-lg ps-4 pe-4 shadow">
+            <a class="navbar-brand" href="#">
+                <img src="dumbbell-svgrepo-com.svg" width="50" height="50" alt="">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -38,13 +41,13 @@
           <div id="carousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="..." alt="First slide">
+                <img class="d-block w-100" src="#" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="..." alt="Second slide">
+                <img class="d-block w-100" src="#" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="..." alt="Third slide">
+                <img class="d-block w-100" src="#" alt="Third slide">
               </div>
             </div>
           </div>
