--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 </head>
 <body class="d-flex flex-column">
     <div id="page">
-        <nav class="navbar navbar-expand-lg ps-4 pe-4 shadow">
-            <a class="navbar-brand" href="#">
-                <img src="dumbbell-svgrepo-com.svg" width="50" height="50" alt="">
+        <header>
+          <nav class="navbar navbar-expand-lg fixed-top ps-4 pe-4 shadow">
+            <div class="container">
+              <a class="navbar-brand" href="#">
+                <img src="images/dumbbell-svgrepo-com.svg" width="50" height="50" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -38,7 +40,9 @@
               </ul>
             </div>
           </nav>
-          <div id="carousel" class="carousel slide" data-ride="carousel">
+        </header>
+        <main>
+          <div id="carousel" class="carousel slide mb-6" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img class="d-block w-100" src="#" alt="First slide">
@@ -51,7 +55,54 @@
               </div>
             </div>
           </div>
+              <div class="container p-3"></div>
+            <div class="container p-4">
+              <div class="row">
+                <div class="col-lg-4">
+                  <div class="card shadow-sm">
+                      <img class="card-image"src="images/gym2.jpg" width="100%" alt="gym equipment">
+                    <div class="card-body">
+                      <h5 class="card-title">Push/Pull/Legs</h5>
+                      <p class="card-text">
+                        Unlock your full potential with our Push/Pull/Split weightlifting program, designed to maximize strength and sculpt your physique.
+                      </p>
+                      <p>
+                        <a class="btn view-details" href="#">View details »</a>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4">
+                  <div class="card shadow-sm">
+                    <img class="card-image"src="images/gym3.jpg" width="100%" alt="">
+                    <div class="card-body">
+                      <p class="card-text">
+                        Elevate your fitness journey with our Upper/Lower program, meticulously crafted to sculpt your body and amplify your strength.
+                      </p>
+                      <p>
+                        <a class="btn view-details" href="#">View details »</a>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4">
+                  <div class="card shadow-sm">
+                    <img class="card-image"src="images/gym4.jpg" width="100%" alt="">
+                    <div class="card-body">
+                      <p class="card-text">
+                        Hello world.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+  
+          </div>
+         
     </div>
+        </main>
+          
     <footer class="mt-auto text-center text-lg-start">
         <!-- Copyright -->
         <div class="text-center p-3">
@@ -64,6 +115,7 @@
         </div>
         <!-- Copyright -->
       </footer>
+    </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
