--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="d-flex flex-column">
     <div id="page">
         <header>
-          <nav class="navbar navbar-expand-lg fixed-top ps-4 pe-4 shadow">
+          <nav class="navbar navbar-expand-lg ps-4 pe-4 shadow">
             <div class="container">
               <a class="navbar-brand" href="#">
                 <img src="images/dumbbell-svgrepo-com.svg" width="50" height="50" alt="">
@@ -42,21 +42,29 @@
           </nav>
         </header>
         <main>
-          <div id="carousel" class="carousel slide mb-6" data-ride="carousel">
+          <div id="carousel" class="carousel slide mb-6" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="#" alt="First slide">
+                <img class="d-block w-100" src="images/carousel-1.jpg" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="#" alt="Second slide">
+                <img class="d-block w-100" src="images/carousel-2.jpg" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="#" alt="Third slide">
+                <img class="d-block w-100" src="images/carousel-3.jpg" alt="Third slide">
               </div>
             </div>
           </div>
-              <div class="container p-3"></div>
-            <div class="container p-4">
+          <div class="p-4 mb-5 bg-body-tertiary">
+            <div class="container-fluid">
+              <h1 class="display-5 fw-bold">About</h1>
+              <p class="col-md-8 fs-4">I have been lifting for years and I would love to share my experience and knowledge with the world. Check out my experience in weightlifting by clicking the button below.</p>
+              <p>
+                <a class="btn btn-lg view-details" href="#">Learn More</a>
+              </p>
+            </div>
+          </div>
+            <div class="container mb-4">
               <div class="row">
                 <div class="col-lg-4">
                   <div class="card shadow-sm">
@@ -76,6 +84,7 @@
                   <div class="card shadow-sm">
                     <img class="card-image"src="images/gym3.jpg" width="100%" alt="">
                     <div class="card-body">
+                      <h5 class="card-title">Upper/Lower</h5>
                       <p class="card-text">
                         Elevate your fitness journey with our Upper/Lower program, meticulously crafted to sculpt your body and amplify your strength.
                       </p>
@@ -89,8 +98,12 @@
                   <div class="card shadow-sm">
                     <img class="card-image"src="images/gym4.jpg" width="100%" alt="">
                     <div class="card-body">
+                      <h5 class="card-title">Full Body</h5>
                       <p class="card-text">
-                        Hello world.
+                        Embark on a fitness journey with our Full Body program, carefully designed to ignite every muscle group and elevate your strength to new heights. 
+                      </p>
+                      <p>
+                        <a class="btn view-details" href="#">View details »</a>
                       </p>
                     </div>
                   </div>
@@ -109,7 +122,7 @@
             © 2024 Michael Halaj 
             <br>
             <a class="text-body" href="#">Terms Of Service</a>
-            -
+            ·
             <a class="text-body" href="#">Privacy Statement</a>
 
         </div>
