--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Training Strategies</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="d-flex flex-column">
-    <div id="page">
+<body class="d-flex flex-column h-100">
         <header>
           <nav class="navbar navbar-expand-lg ps-4 pe-4 shadow">
             <div class="container">
@@ -29,7 +28,7 @@
                       Training Plans
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="#">Push/Pull/Legs</a></li>
+                      <li><a class="dropdown-item" href="ppl.html">Push/Pull/Legs</a></li>
                       <li><a class="dropdown-item" href="#">Upper/Lower</a></li>
                       <li><a class="dropdown-item" href="#">Full Body</a></li>
                     </ul>
@@ -75,7 +74,7 @@
                         Unlock your full potential with our Push/Pull/Split weightlifting program, designed to maximize strength and sculpt your physique.
                       </p>
                       <p>
-                        <a class="btn view-details" href="#">View details »</a>
+                        <a class="btn view-details" href="ppl.html">View details »</a>
                       </p>
                     </div>
                   </div>
@@ -109,14 +108,10 @@
                   </div>
                 </div>
               </div>
-            </div>
-  
-          </div>
-         
-    </div>
+            </div>       
         </main>
           
-    <footer class="mt-auto text-center text-lg-start">
+    <footer class="footer mt-auto text-center text-lg-start">
         <!-- Copyright -->
         <div class="text-center p-3">
             © 2024 Michael Halaj 
@@ -129,6 +124,7 @@
         <!-- Copyright -->
       </footer>
     </div>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </div>
 </body>
 </html>
