finish contact page

--- a/ppl.html
+++ b/ppl.html
@@ -33,7 +33,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -56,7 +56,7 @@
                 Despite its benefits, the push/pull/legs training split also has some drawbacks. One potential limitation is the need for a balanced exercise selection within each category. Without proper variation and progression, individuals may develop muscular imbalances or plateau in their training progress. Additionally, the PPL split may not be suitable for individuals with specific training goals or limitations. For example, powerlifters or athletes focusing on sport-specific training may require a more specialized program that prioritizes certain movements or muscle groups. Furthermore, beginners may find it challenging to design a well-rounded PPL routine without proper guidance or supervision, potentially leading to suboptimal results or injury risk. Overall, while the push/pull/legs training split offers many advantages, it's essential to consider individual needs, goals, and limitations when choosing a workout routine.
             </p>
             <h3>6 Day Workout Split</h3>
-            <div class="row">
+            <div class="row m-3">
                 <div class="col">
                     <div class="card shadow-sm">
                         <div class="card-body">
