--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
 <body class="d-flex flex-column h-100">
     <header>
         <nav class="navbar navbar-expand-lg ps-4 pe-4 shadow">
+            <!--No scrollbar on page affects the navbar shift-->
             <div class="container">
                 <a class="navbar-brand" href="index.html">
                     <img src="images/dumbbell-svgrepo-com.svg" width="50" height="50" alt="">
@@ -40,8 +41,8 @@
             </div>
         </nav>
     </header>
-    <main class="container p-5">
-        <div class="row g-5 align-items-center">
+    <main class="container">
+        <div class="row g-5 align-items-center p-5">
             <div class="col-md-5 col-lg-4">
                 <h1 class="contact-me display-4 fw-bold">Contact Me </h1>
                 <p class="contact-paragraph">
