--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
           <nav class="navbar navbar-expand-lg ps-4 pe-4 shadow">
             <div class="container">
-              <a class="navbar-brand" href="#">
+              <a class="navbar-brand" href="index.html">
                 <img src="images/dumbbell-svgrepo-com.svg" width="50" height="50" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">About</a>
+                  <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -59,7 +59,7 @@
               <h1 class="display-5 fw-bold">About</h1>
               <p class="col-md-8 fs-4">I have been lifting for years and I would love to share my experience and knowledge with the world. Check out my experience in weightlifting by clicking the button below.</p>
               <p>
-                <a class="btn btn-lg view-details" href="#">Learn More</a>
+                <a class="btn btn-lg view-details" href="about.html">Learn More</a>
               </p>
             </div>
           </div>
