--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
     <main class="container">
        <div class="row g-5 align-items-center p-5">
             <div class="col-md-5 col-lg-4">
-                <img class="about-image" src="images/about.jpg" alt="dumbbell rack">
+                <img class="about-image" src="images/about.jpg" alt="dumbbell rack" width="100%">
             </div>
            <div class="col-md-7 col-lg-8">
             <h1 class="contact-me display-4 fw-bold">About</h1>
