--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                       <li><a class="dropdown-item" href="ppl.html">Push/Pull/Legs</a></li>
-                      <li><a class="dropdown-item" href="#">Upper/Lower</a></li>
+                      <li><a class="dropdown-item" href="upperlower.html">Upper/Lower</a></li>
                       <li><a class="dropdown-item" href="#">Full Body</a></li>
                     </ul>
                   </li>
