change visuals in nav

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Training Plans
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <ul class="dropdown-menu" id="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                       <li><a class="dropdown-item" href="ppl.html">Push/Pull/Legs</a></li>
                       <li><a class="dropdown-item" href="upperlower.html">Upper/Lower</a></li>
                       <li><a class="dropdown-item" href="#">Full Body</a></li>
@@ -54,22 +54,25 @@
               </div>
             </div>
           </div>
-          <div class="p-4 mb-5 bg-body-tertiary">
+          <div class="p-4 text-center">
             <div class="container-fluid">
-              <h1 class="display-5 fw-bold">About</h1>
-              <p class="col-md-8 fs-4">I have been lifting for years and I would love to share my experience and knowledge with the world. Check out my experience in weightlifting by clicking the button below.</p>
+              <h1 class="display-5 fw-bold contact-me">Start your fitness journey today!</h1>
+              <div class="col-lg-6 mx-auto">
+                <p class="contact-paragraph">I have been lifting for years and I would love to share my experience and knowledge with the world. Check out my experience in weightlifting by clicking the button below.</p>
+              </div>
               <p>
                 <a class="btn btn-lg view-details" href="about.html">Learn More</a>
               </p>
             </div>
           </div>
+          <div class="bg-body-tertiary p-5 card-background">
             <div class="container mb-4">
               <div class="row">
                 <div class="col-lg-4">
                   <div class="card shadow-sm">
                       <img class="card-image"src="images/gym2.jpg" width="100%" alt="gym equipment">
                     <div class="card-body">
-                      <h5 class="card-title">Push/Pull/Legs</h5>
+                      <h5 class="card-title contact-me fw-bold">Push/Pull/Legs</h5>
                       <p class="card-text">
                         Unlock your full potential with our Push/Pull/Split weightlifting program, designed to maximize strength and sculpt your physique.
                       </p>
@@ -83,12 +86,12 @@
                   <div class="card shadow-sm">
                     <img class="card-image"src="images/gym3.jpg" width="100%" alt="">
                     <div class="card-body">
-                      <h5 class="card-title">Upper/Lower</h5>
+                      <h5 class="card-title contact-me fw-bold">Upper/Lower</h5>
                       <p class="card-text">
                         Elevate your fitness journey with our Upper/Lower program, meticulously crafted to sculpt your body and amplify your strength.
                       </p>
                       <p>
-                        <a class="btn view-details" href="#">View details »</a>
+                        <a class="btn view-details" href="upperlower.html">View details »</a>
                       </p>
                     </div>
                   </div>
@@ -97,7 +100,7 @@
                   <div class="card shadow-sm">
                     <img class="card-image"src="images/gym4.jpg" width="100%" alt="">
                     <div class="card-body">
-                      <h5 class="card-title">Full Body</h5>
+                      <h5 class="card-title contact-me fw-bold">Full Body</h5>
                       <p class="card-text">
                         Embark on a fitness journey with our Full Body program, carefully designed to ignite every muscle group and elevate your strength to new heights. 
                       </p>
@@ -108,7 +111,9 @@
                   </div>
                 </div>
               </div>
-            </div>       
+            </div>
+          </div>
+                   
         </main>
           
     <footer class="footer mt-auto text-center text-lg-start">
