add fullbody and workout splits exmalpes

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                 <li><a class="dropdown-item" href="ppl.html">Push/Pull/Legs</a></li>
                                 <li><a class="dropdown-item" href="upperlower.html">Upper/Lower</a></li>
-                                <li><a class="dropdown-item" href="#">Full Body</a></li>
+                                <li><a class="dropdown-item" href="fullbody.html">Full Body</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
