--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         Embark on a fitness journey with our Full Body program, carefully designed to ignite every muscle group and elevate your strength to new heights. 
                       </p>
                       <p>
-                        <a class="btn view-details" href="#">View details »</a>
+                        <a class="btn view-details" href="fullbody.html">View details »</a>
                       </p>
                     </div>
                   </div>
