fix alts in imgs

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         <nav class="navbar navbar-expand-lg ps-4 pe-4 shadow">
             <div class="container">
                 <a class="navbar-brand" href="index.html">
-                    <img src="images/dumbbell-svgrepo-com.svg" width="50" height="50" alt="">
+                    <img src="images/dumbbell-svgrepo-com.svg" width="50" height="50" alt="dumbell rack">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
