--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
             <!--No scrollbar on page affects the navbar shift-->
             <div class="container">
                 <a class="navbar-brand" href="index.html">
-                    <img src="images/dumbbell-svgrepo-com.svg" width="50" height="50" alt="">
+                    <img src="images/dumbbell-svgrepo-com.svg" width="50" height="50" alt="Home">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
